# guidance-ws

./: .gitmodules  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
llg_min/: Cargo.toml
llg_min/src/: main.rs
scripts/: chat_template.py
