[workspace]
members = [
    "toktrie/core",
    "toktrie/hf_tokenizers",
    "llguidance/rust",
    "llguidance/parser",
    "llguidance/sample_parser",
    "derivre",
]
resolver = "2"

[profile.release]
# debug = 1
# lto = "thin"
# codegen-units = 1

[patch.'https://github.com/microsoft/toktrie']
toktrie = { path = "toktrie/core" }
toktrie_hf_tokenizers = { path = "toktrie/hf_tokenizers" }

[patch.'https://github.com/microsoft/derivre']
derivre = { path = "derivre" }
